// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile 1 getAllMOSObjects 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosReqAll>
    <pause>0</pause>
  </mosReqAll>
</mos>"
`;

exports[`Profile 1 getAllMOSObjects 2`] = `
Array [
  Object {
    "AirStatus": undefined,
    "Changed": MosTime {
      "_time": 2009-11-01T14:35:55.000Z,
      "_timezone": "Z",
      "_timezoneDeclaration": "",
      "_timezoneZuluIndicator": "Z",
    },
    "ChangedBy": MosString128 {
      "_str": "Chris",
    },
    "Created": MosTime {
      "_time": 2009-10-31T23:39:12.000Z,
      "_timezone": "Z",
      "_timezoneDeclaration": "",
      "_timezoneZuluIndicator": "Z",
    },
    "CreatedBy": MosString128 {
      "_str": "Chris",
    },
    "Description": Object {
      "elements": Array [
        Object {
          "$name": "p",
          "$type": "element",
          "elements": Array [
            Object {
              "$type": "text",
              "text": "Exterior footage of",
            },
            Object {
              "$name": "em",
              "$type": "text",
              "text": "Baley Park Hotel",
            },
            Object {
              "$type": "text",
              "text": "on fire with natural sound. Trucks are visible for the first portion of the clip.",
            },
            Object {
              "$name": "em",
              "$type": "text",
              "text": "CG locator at 0:04 and duration 0:05, Baley Park Hotel.",
            },
          ],
        },
        Object {
          "$name": "p",
          "$type": "element",
          "elements": Array [
            Object {
              "$name": "tab",
              "$type": "element",
            },
            Object {
              "$type": "text",
              "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
            },
          ],
        },
        Object {
          "$name": "p",
          "$type": "text",
          "em": "Clip has been doubled for pad on voice over.",
          "text": "Clip has been doubled for pad on voice over.",
        },
      ],
    },
    "Duration": undefined,
    "Group": undefined,
    "ID": MosString128 {
      "_str": "M000123",
    },
    "MosAbstract": undefined,
    "Paths": Array [
      Object {
        "Description": "MPEG2 Video",
        "Target": "\\\\servermediaclip392028cd2320s0d.mxf",
        "Type": "PATH",
      },
      Object {
        "Description": "WM9 750Kbps",
        "Target": "http://server/proxy/clipe.wmv",
        "Type": "PROXY PATH",
      },
      Object {
        "Description": "MOS Object",
        "Target": "http://server/proxy/clipe.xml",
        "Type": "METADATA PATH",
      },
    ],
    "Revision": undefined,
    "Slug": MosString128 {
      "_str": "HOTEL FIRE",
    },
    "Status": undefined,
    "TimeBase": undefined,
    "Type": undefined,
  },
  Object {
    "AirStatus": "READY",
    "Changed": MosTime {
      "_time": 2009-11-01T15:21:15.000Z,
      "_timezone": "Z",
      "_timezoneDeclaration": "",
      "_timezoneZuluIndicator": "Z",
    },
    "ChangedBy": MosString128 {
      "_str": "Chris",
    },
    "Created": MosTime {
      "_time": 2009-11-01T15:19:01.000Z,
      "_timezone": "Z",
      "_timezoneDeclaration": "",
      "_timezoneZuluIndicator": "Z",
    },
    "CreatedBy": MosString128 {
      "_str": "Phil",
    },
    "Description": "VOICE OVER MATERIAL OF COLSTAT MURDER SITES SHOT ON 1-NOV.",
    "Duration": 800,
    "Group": undefined,
    "ID": MosString128 {
      "_str": "M000224",
    },
    "MosAbstract": undefined,
    "MosExternalMetaData": Array [
      Object {
        "MosPayload": Object {
          "Approved": 0,
          "Creator": "SHOLMES",
          "ModBy": "LJOHNSTON",
          "ModTime": 20010308142001,
          "Owner": "SHOLMES",
          "TextTime": 278,
          "mediaTime": 0,
          "text": 0,
        },
        "MosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
        "MosScope": "STORY",
      },
    ],
    "Paths": Array [
      Object {
        "Description": "MPEG2 Video",
        "Target": "\\\\servermediaclip392028cd2320s0d.mxf",
        "Type": "PATH",
      },
      Object {
        "Description": "WM9 750Kbps",
        "Target": "http://server/proxy/clipe.wmv",
        "Type": "PROXY PATH",
      },
      Object {
        "Description": "MOS Object",
        "Target": "http://server/proxy/clipe.xml",
        "Type": "METADATA PATH",
      },
    ],
    "Revision": 4,
    "Slug": MosString128 {
      "_str": "COLSTAT MURDER:VO",
    },
    "Status": "UPDATED",
    "TimeBase": 59.94,
    "Type": "VIDEO",
  },
]
`;

exports[`Profile 1 getMOSObject 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosReqObj>
    <objID>M000123</objID>
  </mosReqObj>
</mos>"
`;

exports[`Profile 1 getMOSObject 2`] = `
Object {
  "AirStatus": "READY",
  "Changed": MosTime {
    "_time": 2009-10-31T23:39:12.000Z,
    "_timezone": "Z",
    "_timezoneDeclaration": "",
    "_timezoneZuluIndicator": "Z",
  },
  "ChangedBy": MosString128 {
    "_str": "Chris",
  },
  "Created": MosTime {
    "_time": 2009-10-31T23:39:12.000Z,
    "_timezone": "Z",
    "_timezoneDeclaration": "",
    "_timezoneZuluIndicator": "Z",
  },
  "CreatedBy": MosString128 {
    "_str": "Chris",
  },
  "Description": Object {
    "elements": Array [
      Object {
        "$name": "p",
        "$type": "element",
        "elements": Array [
          Object {
            "$type": "text",
            "text": "Exterior footage of",
          },
          Object {
            "$name": "em",
            "$type": "text",
            "text": "Baley Park Hotel",
          },
          Object {
            "$type": "text",
            "text": "on fire with natural sound. Trucks are visible for the first portion of the clip.",
          },
          Object {
            "$name": "em",
            "$type": "text",
            "text": "CG locator at 0:04 and duration 0:05, Baley Park Hotel.",
          },
        ],
      },
      Object {
        "$name": "p",
        "$type": "element",
        "elements": Array [
          Object {
            "$name": "tab",
            "$type": "element",
          },
          Object {
            "$type": "text",
            "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
          },
        ],
      },
      Object {
        "$name": "p",
        "$type": "text",
        "em": "Clip has been doubled for pad on voice over.",
        "text": "Clip has been doubled for pad on voice over.",
      },
    ],
  },
  "Duration": 1800,
  "Group": "Show 7",
  "ID": MosString128 {
    "_str": "M000123",
  },
  "MosAbstract": Object {
    "elements": Array [
      Object {
        "$name": "b",
        "$type": "text",
        "text": "Hotel Fire",
      },
      Object {
        "$name": "em",
        "$type": "text",
        "text": "vo",
      },
      Object {
        "$type": "text",
        "text": ":30",
      },
    ],
  },
  "MosExternalMetaData": Array [
    Object {
      "MosPayload": Object {
        "Approved": 0,
        "Creator": "SHOLMES",
        "ModBy": "LJOHNSTON",
        "ModTime": 20010308142001,
        "Owner": "SHOLMES",
        "TextTime": 278,
        "mediaTime": 0,
        "text": 0,
      },
      "MosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
      "MosScope": "STORY",
    },
  ],
  "Paths": Array [
    Object {
      "Description": "MPEG2 Video",
      "Target": "\\\\servermediaclip392028cd2320s0d.mxf",
      "Type": "PATH",
    },
    Object {
      "Description": "WM9 750Kbps",
      "Target": "http://server/proxy/clipe.wmv",
      "Type": "PROXY PATH",
    },
    Object {
      "Description": "MOS Object",
      "Target": "http://server/proxy/clipe.xml",
      "Type": "METADATA PATH",
    },
  ],
  "Revision": 1,
  "Slug": MosString128 {
    "_str": "Hotel Fire",
  },
  "Status": "NEW",
  "TimeBase": 59.94,
  "Type": "VIDEO",
}
`;

exports[`Profile 1 onRequestAllMOSObjects 1`] = `
Array [
  Array [],
]
`;

exports[`Profile 1 onRequestAllMOSObjects 2`] = `
Object {
  "mos": Object {
    "messageID": Object {
      "_text": 1634,
    },
    "mosAck": Object {
      "objID": Object {},
      "objRev": Object {},
      "status": Object {},
      "statusDescription": Object {},
    },
    "mosID": Object {
      "_text": "our.mos.id",
    },
    "ncsID": Object {
      "_text": "their.mos.id",
    },
  },
}
`;

exports[`Profile 1 onRequestAllMOSObjects 3`] = `
Object {
  "mos": Object {
    "messageID": 99999,
    "mosID": "our.mos.id",
    "mosListAll": Object {
      "mosObj": Array [
        Object {
          "created": "2001-01-01T00:00:00,000",
          "createdBy": "Jonas",
          "mosExternalMetadata": Object {
            "mosPayload": Object {
              "Approved": 0,
              "Creator": "SHOLMES",
              "ModBy": "LJOHNSTON",
              "ModTime": 20010308142001,
              "Owner": "SHOLMES",
              "TextTime": 278,
              "mediaTime": 0,
              "text": 0,
            },
            "mosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>",
            "mosScope": "STORY",
          },
          "objAir": "READY",
          "objDur": 1500,
          "objID": "M000123",
          "objPaths": Object {
            "objMetadataPath": Object {
              "techDescription": "MOS Object",
              "text": "http://server/proxy/clipe.xml",
            },
            "objPath": Object {
              "techDescription": "MPEG2 Video",
              "text": "\\\\server\\\\media\\\\clip392028cd2320s0d.mxf",
            },
            "objProxyPath": Object {
              "techDescription": "WM9 750Kbps",
              "text": "http://server/proxy/clipe.wmv",
            },
          },
          "objRev": 1,
          "objSlug": "My new object",
          "objTB": 50,
          "objType": "VIDEO",
          "status": "READY",
        },
        Object {
          "created": "2001-01-01T00:00:00,000",
          "createdBy": "Jonas",
          "objAir": "READY",
          "objDur": 1000,
          "objID": "M0003523",
          "objPaths": Object {
            "objMetadataPath": Object {
              "techDescription": "MOS Object",
              "text": "http://server/proxy/clipe.xml",
            },
            "objPath": Object {
              "techDescription": "MPEG2 Video",
              "text": "\\\\servermediaclip392028cd2320s0d.mxf",
            },
            "objProxyPath": Object {
              "techDescription": "WM9 750Kbps",
              "text": "http://server/proxy/clipe.wmv",
            },
          },
          "objRev": 1,
          "objSlug": "My new object 2",
          "objTB": 50,
          "objType": "VIDEO",
          "status": "READY",
        },
      ],
    },
    "ncsID": "their.mos.id",
  },
}
`;

exports[`Profile 1 onRequestMOSObject 1`] = `
Array [
  Array [
    "M000123",
  ],
]
`;

exports[`Profile 1 onRequestMOSObject 2`] = `
Object {
  "mos": Object {
    "messageID": Object {
      "_text": 1633,
    },
    "mosID": Object {
      "_text": "our.mos.id",
    },
    "mosObj": Object {
      "created": Object {
        "_text": "2001-01-01T00:00:00,000",
      },
      "createdBy": Object {
        "_text": "Jonas",
      },
      "mosExternalMetadata": Object {
        "mosPayload": Object {
          "Approved": Object {
            "_text": 0,
          },
          "Creator": Object {
            "_text": "SHOLMES",
          },
          "ModBy": Object {
            "_text": "LJOHNSTON",
          },
          "ModTime": Object {
            "_text": 20010308142001,
          },
          "Owner": Object {
            "_text": "SHOLMES",
          },
          "TextTime": Object {
            "_text": 278,
          },
          "mediaTime": Object {
            "_text": 0,
          },
        },
        "mosSchema": Object {
          "_text": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>",
        },
        "mosScope": Object {
          "_text": "STORY",
        },
      },
      "objAir": Object {
        "_text": "READY",
      },
      "objDur": Object {
        "_text": 1500,
      },
      "objID": Object {
        "_text": "M000123",
      },
      "objPaths": Object {
        "objMetadataPath": Object {
          "_attributes": Object {
            "techDescription": "MOS Object",
          },
          "_text": "http://server/proxy/clipe.xml",
        },
        "objPath": Object {
          "_attributes": Object {
            "techDescription": "MPEG2 Video",
          },
          "_text": "\\\\server\\\\media\\\\clip392028cd2320s0d.mxf",
        },
        "objProxyPath": Object {
          "_attributes": Object {
            "techDescription": "WM9 750Kbps",
          },
          "_text": "http://server/proxy/clipe.wmv",
        },
      },
      "objRev": Object {
        "_text": 1,
      },
      "objSlug": Object {
        "_text": "My new object",
      },
      "objTB": Object {
        "_text": 50,
      },
      "objType": Object {
        "_text": "VIDEO",
      },
      "status": Object {
        "_text": "READY",
      },
    },
    "ncsID": Object {
      "_text": "their.mos.id",
    },
  },
}
`;
